# libdxfrw

python/: CMakeLists.txt  README.md  pydxfrw.cpp  setup.py
src/: drw_entities.h  drw_objects.cpp  libdwgr.cpp
src/intern/: drw_textcodec.cpp  drw_textcodec.h  dwgreader.cpp  dwgreader18.cpp
